--- a/packages/garron-i18n/package.json
+++ b/packages/garron-i18n/package.json
@@ -57,7 +57,7 @@
     "@inkjs/ui": "^1",
     "@langchain/core": "latest",
     "@langchain/openai": "latest",
-    "@garron/cli-ui": "latest",
+    "@garron/cli-ui": "file:../garron-cli-ui",
     "chalk": "^5",
     "commander": "^11",
     "conf": "^12",
