--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "command": {
-    "bootstrap": {
-      "hoist": true
+    "publish": {
+      "registry": "https://registry.npmjs.org"
     }
   },
   "npmClient": "pnpm",
