--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,4 @@
-# Eslintignore for LobeHub
+# Eslintignore for GarrronHub
 ################################################################
 
 # dependencies
