--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,4 @@
-# Prettierignore for LobeHub
+# Prettierignore for GarronHub
 ################################################################
 
 # general
